# gearoenix

./: .clang-format  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  CMakePresets.json  README.md  compile-d3d-shaders.sh  compile-dxr-shaders.sh  compile-vulkan-shaders.sh  format.py  format.sh  ios-build.sh  linux-build.sh  mac-build.sh  push.sh  rnd-fnt-manager.cpp  setup.py  sonar-project.properties  vcpkg.json  wasm-build.sh  webassembly-server.py  webassembly.sh
android-build/: AndroidManifest.xml  CMakeLists.txt  build.gradle
cmake/: CMakeLists.txt  download.cmake  gx-bgfx.cmake  gx-builder.cmake  gx-compile-lib.cmake  gx-compile-shader.cmake  gx-download-file.cmake  gx-flag-util.cmake  gx-imgui.cmake
cmake/modules/: CodeCoverage.cmake
cmake/toolchains/: gearoenix-emscripten.cmake
demos/world-wide-racing/: CMakeLists.txt  gx-demo-wwr-car.cpp  gx-demo-wwr-car.hpp  gx-demo-wwr-count-down.cpp  gx-demo-wwr-count-down.hpp  gx-demo-wwr-garage.cpp  gx-demo-wwr-garage.hpp  gx-demo-wwr-main.cpp  gx-demo-wwr-main.hpp  gx-demo-wwr-rotating-button.cpp  gx-demo-wwr-rotating-button.hpp  gx-demo-wwr-terrain-manager.cpp  gx-demo-wwr-terrain-manager.hpp  gx-demo-wwr-training.cpp  gx-demo-wwr-training.hpp
editor/: CMakeLists.txt  gx-editor-main.cpp  gx-editor-main.hpp
editor/control/: CMakeLists.txt  gx-editor-ctrl-manager.cpp  gx-editor-ctrl-manager.hpp  gx-editor-ctrl-project.cpp  gx-editor-ctrl-project.hpp
editor/ui/: CMakeLists.txt  gx-ed-ui-components.cpp  gx-ed-ui-components.hpp  gx-ed-ui-dockable-section.cpp  gx-ed-ui-dockable-section.hpp  gx-ed-ui-entities.cpp  gx-ed-ui-entities.hpp  gx-ed-ui-font.cpp  gx-ed-ui-font.hpp  gx-ed-ui-icons.cpp  gx-ed-ui-icons.hpp  gx-ed-ui-manager.cpp  gx-ed-ui-manager.hpp  gx-ed-ui-menu-bar.cpp  gx-ed-ui-menu-bar.hpp  gx-ed-ui-menu-entity.cpp  gx-ed-ui-menu-entity.hpp  gx-ed-ui-menu-project.cpp  gx-ed-ui-menu-project.hpp  gx-ed-ui-menu-scene.cpp  gx-ed-ui-menu-scene.hpp  gx-ed-ui-menu-window.cpp  gx-ed-ui-menu-window.hpp  gx-ed-ui-menu-world.cpp  gx-ed-ui-menu-world.cpp~  gx-ed-ui-menu-world.hpp  gx-ed-ui-side-panel.cpp  gx-ed-ui-side-panel.hpp  gx-ed-ui-theme.cpp  gx-ed-ui-theme.hpp  gx-ed-ui-tooltip.hpp  gx-ed-ui-window-overlay-progress-bar.cpp  gx-ed-ui-window-overlay-progress-bar.hpp  gx-ed-ui-window-scene.cpp  gx-editor-ui-manager.cpp  gx-editor-ui-manager.hpp  gx-editor-ui-menu-bar.cpp  gx-editor-ui-menu-bar.hpp  gx-editor-ui-menu-entity.cpp  gx-editor-ui-menu-entity.hpp  (+9 more)
editor/viewport/: CMakeLists.txt  gx-ed-vp-button.cpp  gx-ed-vp-button.hpp  gx-ed-vp-camera.cpp  gx-ed-vp-camera.hpp  gx-ed-vp-gizmo-buttons.cpp  gx-ed-vp-gizmo-buttons.hpp  gx-ed-vp-projection-button.cpp  gx-ed-vp-projection-button.hpp  gx-ed-vp-rotate-button.cpp  gx-ed-vp-rotate-button.hpp  gx-ed-vp-scale-button.cpp  gx-ed-vp-scale-button.hpp  gx-ed-vp-transform-mode-button.cpp  gx-ed-vp-transform-mode-button.hpp  gx-ed-vp-translate-button.cpp  gx-ed-vp-translate-button.hpp  gx-ed-vp-viewport.cpp  gx-ed-vp-viewport.hpp
examples/: CMakeLists.txt  exm-hello-world.cpp  exm-hello-world.hpp
examples/000-empty-window/: CMakeLists.txt  gx-ex-000-main.cpp
examples/000-hello-world/: CMakeLists.txt  gx-ex-000-main.cpp
examples/001-empty-window/: CMakeLists.txt  gx-ex-001-main.cpp
examples/001-hello-triangle/: CMakeLists.txt  gx-ex-001-main.cpp
examples/001-hello-world/: exm-001-hello-world.cpp  exm-001-hello-world.hpp  gx-exm-001-hello-world.cpp  gx-exm-001-hello-world.hpp
examples/002-asset-loading/: exm-002-asset-loading.cpp  exm-002-asset-loading.hpp  gx-exm-002-asset-loading.cpp  gx-exm-002-asset-loading.hpp
examples/002-hello-texture/: CMakeLists.txt  gx-ex-002-main.cpp
examples/002-hello-triangle/: CMakeLists.txt  gx-ex-002-main.cpp
examples/003-hello-ecs/: CMakeLists.txt  gx-ex-003-main.cpp
examples/003-hello-texture/: CMakeLists.txt  gx-ex-003-main.cpp
examples/003-net-hello-world/: exm-003-net-hello-world.cpp  exm-003-net-hello-world.hpp
examples/003-ui-widgets/: exm-003-ui-widgets.cpp  exm-003-ui-widgets.hpp  gx-exm-003-ui-widgets.cpp  gx-exm-003-ui-widgets.hpp
examples/004-hello-ecs/: CMakeLists.txt  gx-ex-004-main.cpp
examples/004-hello-imgui/: CMakeLists.txt  gx-ex-004-main.cpp
examples/004-runtime-reflection-probe/: exm-004-runtime-reflection-probe.cpp  exm-004-runtime-reflection-probe.hpp  gx-exm-004-runtime-reflection-probe.cpp  gx-exm-004-runtime-reflection-probe.hpp
examples/005-hello-gltf/: CMakeLists.txt  gx-ex-005-main.cpp
examples/005-hello-imgui/: CMakeLists.txt  gx-ex-005-main.cpp
examples/006-hello-gltf/: CMakeLists.txt  gx-ex-006-main.cpp
examples/006-hello-skybox/: CMakeLists.txt  gx-ex-006-main.cpp
examples/007-hello-skybox/: CMakeLists.txt  gx-ex-007-main.cpp
examples/007-reflection-probe/: CMakeLists.txt  gx-ex-007-main.cpp
examples/008-baked-reflection-probe/: CMakeLists.txt  gx-ex-008-main.cpp
examples/008-reflection-probe/: CMakeLists.txt  gx-ex-008-main.cpp
examples/009-baked-reflection-probe/: CMakeLists.txt  gx-ex-009-main.cpp
examples/009-lighting/: CMakeLists.txt  gx-ex-009-main.cpp
examples/010-animation/: CMakeLists.txt  gx-ex-010-main.cpp
examples/010-lighting/: CMakeLists.txt  gx-ex-010-main.cpp
gearoenix/: CMakeLists.txt
gearoenix/glc3/: glc3.hpp  (+1 more)
tests/: CMakeLists.txt  gx-test-006-stop-point.cpp  gx-test-ai-dijkstra.hpp  gx-test-ai-graph.hpp  gx-test-core-pool.hpp  gx-test-cr-allocator.hpp  gx-test-cr-ecs.hpp  gx-test-cr-pool.hpp  gx-test-cr-sync-influence-manager.hpp  gx-test-main.cpp  gx-test-math-frustum.hpp  gx-test-math-vector.hpp  gx-test-phs-acc-bvh.hpp  gx-test-physics-accelerator-bvh.hpp  gx-test-render-texture.hpp  gx-test-rnd-texture.hpp  test-001-math-vector.hpp  test-001-math.cpp  test-001-math.hpp  test-002-frustum.hpp  test-002-math-frustum.hpp  test-003-math.cpp  test-004-bezier-curve-rendering.cpp  test-005-semaphore.cpp  test-core-pool.hpp  test-main.cpp  test-math-frustum.hpp  test-math-vector.hpp  test-physics-accelerator-bvh.hpp  test-render-texture.hpp
tools/: CMakeLists.txt  build.bat  build.sh  gearoenix-ttf-baker.cpp  gearoenix-ttf-to-png.cpp
(+2709 files in other folders)
